<?xml version="1.0"?>
<package>
  <name>test_ros</name>
  <version>0.0.0</version>
  <description>Test package for ROS</description>

  <license>GPLv3</license>
  <maintainer email="mack@duckietown.org">Mack</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
